@@ -28,7 +28,6 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.io.OutputStream;
-import java.io.UnsupportedEncodingException;
 import java.net.DatagramPacket;
 import java.net.DatagramSocket;
 import java.net.InetAddress;
@@ -50,6 +49,7 @@ import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.nio.file.SimpleFileVisitor;
 import java.nio.file.StandardCopyOption;
+import java.nio.file.attribute.BasicFileAttributeView;
 import java.nio.file.attribute.BasicFileAttributes;
 import java.nio.file.attribute.PosixFilePermission;
 import java.security.CodeSource;
@@ -58,6 +58,7 @@ import java.text.SimpleDateFormat;
 import java.time.Instant;
 import java.util.ArrayList;
 import java.util.Calendar;
+import java.util.Collection;
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.Date;
@@ -88,6 +89,7 @@ import org.apache.commons.io.FileUtils;
 import org.apache.commons.io.IOUtils;
 import org.apache.commons.lang3.LocaleUtils;
 import org.apache.commons.lang3.StringUtils;
+import org.apache.commons.lang3.SystemUtils;
 import org.apache.commons.lang3.builder.ReflectionToStringBuilder;
 import org.apache.commons.text.StringEscapeUtils;
 import org.brotli.dec.BrotliInputStream;
@@ -554,24 +556,43 @@ public class Utils {
    *          the property to fetch
    * @return the enc prop
    */
-  @SuppressWarnings("deprecation")
   private static String getEncProp(String prop) {
     String property = System.getProperty(prop);
     if (StringUtils.isBlank(property)) {
       return "";
     }
 
-    try {
-      return URLEncoder.encode(property, "UTF-8");
-    }
-    catch (UnsupportedEncodingException e) {
-      return URLEncoder.encode(property);
-    }
+    return URLEncoder.encode(property, StandardCharsets.UTF_8);
   }
 
   public static void removeEmptyStringsFromList(List<String> list) {
     List<String> toFilter = list.stream().filter(StringUtils::isBlank).collect(Collectors.toList());
     list.removeAll(toFilter);
+  }
+
+  public static void removeDuplicateStringFromCollectionIgnoreCase(Collection<String> original) {
+    // 1. remove duplicates
+    Set<String> items = new HashSet<>(original);
+
+    // 2. remove case insensitive duplicates
+    Set<String> check = new HashSet<>();
+    List<String> toRemove = new ArrayList<>();
+
+    original.forEach(item -> {
+      String upper = item.toUpperCase(Locale.ROOT);
+      if (check.contains(upper)) {
+        toRemove.add(item);
+      }
+      else {
+        check.add(upper);
+      }
+    });
+
+    toRemove.forEach(items::remove);
+
+    // 3. re-add surviving entries
+    original.clear();
+    original.addAll(items);
   }
 
   /**
@@ -689,7 +710,8 @@ public class Utils {
                 }
                 continue;
               }
-              Files.copy(source, destination, StandardCopyOption.REPLACE_EXISTING);
+              Files.copy(source, destination, StandardCopyOption.REPLACE_EXISTING, StandardCopyOption.COPY_ATTRIBUTES);
+              fixDateAttributes(source, destination);
             }
 
             // delete source files
@@ -733,6 +755,22 @@ public class Utils {
       }
     }
     return true; // dir are equal
+  }
+
+  private static void fixDateAttributes(Path source, Path destination) {
+    // fix date attributes in Windows due to _incomplete_ system operations
+    // see https://stackoverflow.com/a/58205668
+    if (SystemUtils.IS_OS_WINDOWS) {
+      try {
+        BasicFileAttributes srcAttrs = Files.readAttributes(source, BasicFileAttributes.class);
+        BasicFileAttributeView tgtView = Files.getFileAttributeView(destination, BasicFileAttributeView.class);
+
+        tgtView.setTimes(srcAttrs.lastModifiedTime(), srcAttrs.lastAccessTime(), srcAttrs.creationTime());
+      }
+      catch (Exception e) {
+        LOGGER.trace("could not set date attributes for '{}' - '{}'", destination, e.getMessage());
+      }
+    }
   }
 
   /**
@@ -793,7 +831,8 @@ public class Utils {
         catch (AtomicMoveNotSupportedException a) {
           // if it fails (b/c not on same file system) use that
           try {
-            Files.copy(srcFile, destFile, StandardCopyOption.REPLACE_EXISTING);
+            Files.copy(srcFile, destFile, StandardCopyOption.REPLACE_EXISTING, StandardCopyOption.COPY_ATTRIBUTES);
+            fixDateAttributes(srcFile, destFile);
             Files.delete(srcFile);
             rename = true; // no exception
           }
@@ -903,6 +942,7 @@ public class Utils {
         try {
           // replace existing for changing cASE
           Files.copy(srcFile, destFile, StandardCopyOption.REPLACE_EXISTING, StandardCopyOption.COPY_ATTRIBUTES);
+          fixDateAttributes(srcFile, destFile);
           rename = true;// no exception
         }
         catch (UnsupportedOperationException u) {
@@ -910,6 +950,7 @@ public class Utils {
           try {
             // replace existing for changing cASE
             Files.copy(srcFile, destFile, StandardCopyOption.REPLACE_EXISTING);
+            fixDateAttributes(srcFile, destFile);
             rename = true;// no exception
           }
           catch (IOException e) {
@@ -959,37 +1000,46 @@ public class Utils {
    * @return true/false if successful
    */
   public static boolean deleteFileWithBackup(Path file, String datasource) {
-    Path ds = Paths.get(datasource);
-
-    if (!file.startsWith(ds)) { // safety
-      LOGGER.warn("could not delete file '{}': datasource '{}' does not match", file, datasource);
-      return false;
+    // check if the backup is activated
+    if (!Settings.getInstance().isEnableTrash()) {
+      // backup disabled
+      return deleteFileSafely(file);
     }
-    if (Files.isDirectory(file)) {
-      LOGGER.warn("could not delete file '{}': file is a directory!", file);
-      return false;
-    }
+    else {
+      // backup enabled
+      Path ds = Paths.get(datasource);
 
-    // check if the file exists; if it does not exist any more we won't need to delete it ;)
-    if (!Files.exists(file)) {
-      // this file is no more here - just return "true"
-      return true;
-    }
-
-    // backup
-    try {
-      // create path
-      Path backup = Paths.get(ds.toAbsolutePath().toString(), Constants.BACKUP_FOLDER, ds.relativize(file).toString());
-      if (!Files.exists(backup.getParent())) {
-        Files.createDirectories(backup.getParent());
+      if (!file.startsWith(ds)) { // safety
+        LOGGER.warn("could not delete file '{}': datasource '{}' does not match", file, datasource);
+        return false;
       }
-      // overwrite backup file by deletion prior
-      Files.deleteIfExists(backup);
-      return moveFileSafe(file, backup);
-    }
-    catch (IOException e) {
-      LOGGER.warn("Could not delete file: {}", e.getMessage());
-      return false;
+
+      if (Files.isDirectory(file)) {
+        LOGGER.warn("could not delete file '{}': file is a directory!", file);
+        return false;
+      }
+
+      // check if the file exists; if it does not exist any more we won't need to delete it ;)
+      if (!Files.exists(file)) {
+        // this file is no more here - just return "true"
+        return true;
+      }
+
+      // backup
+      try {
+        // create path
+        Path backup = Paths.get(ds.toAbsolutePath().toString(), Constants.BACKUP_FOLDER, ds.relativize(file).toString());
+        if (!Files.exists(backup.getParent())) {
+          Files.createDirectories(backup.getParent());
+        }
+        // overwrite backup file by deletion prior
+        Files.deleteIfExists(backup);
+        return moveFileSafe(file, backup);
+      }
+      catch (IOException e) {
+        LOGGER.warn("Could not delete file: {}", e.getMessage());
+        return false;
+      }
     }
   }
 
@@ -1116,9 +1166,9 @@ public class Utils {
       String language = matcher.group(1);
       String country = matcher.group(2);
 
-      if (country != null) {
+      if (StringUtils.isNotBlank(country)) {
         // found language & country
-        myloc = new Locale(language, country);
+        myloc = getLocaleFromLanguage(language + "_" + country);
       }
       else {
         // found only language
@@ -1150,8 +1200,8 @@ public class Utils {
         // Whoopsie. try to fix string....
         if (language.matches("^\\w\\w_\\w\\w.*")) {
           // okay, maybe some special locale - try to detect all exceptions
-          if ("zh_HANT".equals(language)) {
-            return new Locale("zh", "HANT");
+          if ("zh_Hant".equalsIgnoreCase(language)) {
+            return Locale.TRADITIONAL_CHINESE;
           }
           return LocaleUtils.toLocale(language.substring(0, 5));
         }
@@ -1169,10 +1219,6 @@ public class Utils {
         // map to main countries; de->de_DE (and not de_CH)
         l = locale;
       }
-    }
-    if (l == null && !countries.isEmpty()) {
-      // well, take the first one
-      l = countries.get(0);
     }
 
     if (l == null) {
@@ -1350,7 +1396,7 @@ public class Utils {
       return;
     }
 
-    LOGGER.info("Deleting complete directory: {}", dir);
+    LOGGER.info("Deleting empty directories in: {}", dir);
     Files.walkFileTree(dir, new FileVisitor<>() {
 
       @Override
@@ -1483,7 +1529,8 @@ public class Utils {
           public FileVisitResult visitFile(Path file, BasicFileAttributes attrs) throws IOException {
             final Path destFile = Paths.get(destDir.toString(), file.toString());
             LOGGER.debug("Extracting file {} to {}", file, destFile);
-            Files.copy(file, destFile, StandardCopyOption.REPLACE_EXISTING);
+            Files.copy(file, destFile, StandardCopyOption.REPLACE_EXISTING, StandardCopyOption.COPY_ATTRIBUTES);
+            fixDateAttributes(file, destFile);
             return FileVisitResult.CONTINUE;
           }
 
@@ -1543,7 +1590,8 @@ public class Utils {
           public FileVisitResult visitFile(Path file, BasicFileAttributes attrs) throws IOException {
             if (file.toString().equals(fileToExtract.toString())) {
               LOGGER.debug("Extracting file {} to {}", file, destFile);
-              Files.copy(file, destFile, StandardCopyOption.REPLACE_EXISTING);
+              Files.copy(file, destFile, StandardCopyOption.REPLACE_EXISTING, StandardCopyOption.COPY_ATTRIBUTES);
+              fixDateAttributes(file, destFile);
             }
             return FileVisitResult.CONTINUE;
           }
@@ -1824,7 +1872,8 @@ public class Utils {
 
     @Override
     public FileVisitResult visitFile(final Path file, final BasicFileAttributes attrs) throws IOException {
-      Files.copy(file, targetPath.resolve(sourcePath.relativize(file)), StandardCopyOption.REPLACE_EXISTING);
+      Files.copy(file, targetPath.resolve(sourcePath.relativize(file)), StandardCopyOption.REPLACE_EXISTING, StandardCopyOption.COPY_ATTRIBUTES);
+      fixDateAttributes(file, targetPath);
       return FileVisitResult.CONTINUE;
     }
   }
